tests/baselines/reference/es6ExportAssignment.errors.txt
tests/cases/compiler/es6ExportAssignment.ts(3,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/compiler/es6ExportAssignment.ts(3,1): error TS1201: Export assignment cannot be used when targeting ECMAScript 6 or higher. Consider using 'export default' instead.


==== tests/cases/compiler/es6ExportAssignment.ts (2 errors) ====
    
    var a = 10;
    export = a;
    ~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    ~~~~~~~~~~~
!!! error TS1201: Export assignment cannot be used when targeting ECMAScript 6 or higher. Consider using 'export default' instead.